# DEBUG_LOGGER

./: .gitignore  LICENSE  setup.cfg
src/debug_logger/: logger.py
src/debug_logger_hiro_liu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
