[metadata]
name = debug-logger-hiro-liu
version = 1.0.0
author = Hiro Liu
author_email = hirobumi1989@gmail.com
description = Formatted debug message, contains date time, PID, thread ID and line number, etc...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HiroLiuTw/DEBUG_LOGGER
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src